fix: Toggle switch alignment issues #2452

--- a/webui/src/scss/_common.scss
+++ b/webui/src/scss/_common.scss
@@ -143,3 +143,7 @@ code {
 .flex-wrap {
 	flex-wrap: wrap;
 }
+
+.c-switch-input {
+	display: none;
+}
